[package]
name = "chatbot"
version = "0.1.0"
edition = "2021"

[dependencies]
aac = "0.0.0"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.8.3", features = ["cuda"] }
candle-onnx = "0.8.3"
candle-transformers = { version = "0.8.3", features = ["cuda"] }
cpal = "0.15.3"
flac = "0.5.0"
piper-rs = "0.1.9"
symphonia = { version = "0.5.4", features = ["mp3"] }
tokio = { version = "1.43.0", features = ["full"] }
vad-rs = "0.1.5"
wav = "1.0.1"
whisper-rs = "0.13.2"
